force-app/main/default/src/objects/HealthCloudGA__ConditionToHCCCodeMapping__c/HealthCloudGA__ConditionToHCCCodeMapping__c.object-meta.xml
<CustomObject>
    <label>Condition to HCC Code Mapping</label>
    <nameField>
        <displayFormat>Map-{0}</displayFormat>
        <label>Mapping ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Condition to HCC Code Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>