force-app/main/default/src/objects/HealthCloudGA__ConditionToHCCCodeMapping__c/fields/HealthCloudGA__ConditionCode__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ConditionCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Condition Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>