force-app/main/default/src/objects/HealthCloudGA__ConditionToHCCCodeMapping__c/fields/HealthCloudGA__ValidFrom__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ValidFrom__c</fullName>
    <description>Year in which the HCC code becomes valid.</description>
    <inlineHelpText>Year in which the HCC code becomes valid.</inlineHelpText>
    <label>Valid From</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>