force-app/main/default/src/objects/HealthCloudGA__ConditionToHCCCodeMapping__c/fields/HealthCloudGA__ValidThrough__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__ValidThrough__c</fullName>
    <description>Year after which the code is no longer valid.</description>
    <inlineHelpText>Year after which the code is no longer valid.</inlineHelpText>
    <label>Valid Through</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>