force-app/main/default/src/objects/HealthCloudGA__ConditionToHCCCodeMapping__c/fields/HealthCloudGA__Year__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Year__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>