force-app/main/default/src/objects/HealthCloudGA__ConditionToHCCCodeMapping__c/fields/HealthCloudGA__YearConditionCodeHCCCode__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__YearConditionCodeHCCCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Year + Condition Code + HCC Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>